samples/_failures_safe/1761082073_c06a9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e7cdd59.c: In function ‘main’:
./samples/SAFE/__tmp_2e7cdd59.c:141:9: error: expected declaration or statement at end of input
  141 |         return 0;
      |         ^~~~~~
./samples/SAFE/__tmp_2e7cdd59.c:141:9: error: expected declaration or statement at end of input
